--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-config-preact": "^1.1.1",
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
+    "node-sass": "^5.0.0",
     "preact-cli": "^3.0.0",
+    "sass-loader": "7.3.1",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^3.7.5"
   },
