--- a/.editorconfig
+++ b/.editorconfig
@@ -9,6 +9,6 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 # 2 tab indentation
-indent_style = tab
+indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
