--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "preact": "^10.3.1",
     "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "preact-cli": "^3.0.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
@@ -42,7 +43,6 @@
     "jest": "^26.2.2",
     "jest-preset-preact": "^4.0.2",
     "node-sass": "^5.0.0",
-    "preact-cli": "^3.0.0",
     "sass-loader": "10",
     "sirv-cli": "^1.0.0-next.3",
     "typescript": "^3.7.5"
