--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "preact1",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "build": "preact build",
@@ -25,6 +25,14 @@
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
     "preact-cli": "^3.0.0"
+  },
+  "peerDependencies": {
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-webpack-plugin": "^5.1.3"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
