--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
   },
   "dependencies": {
     "preact": "^10.3.1",
+    "preact-cli": "^3.0.0",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
-    "preact-cli": "^3.0.0"
-  },
-  "peerDependencies": {
-    "workbox-cacheable-response": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.4",
     "workbox-core": "^5.1.3",
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
