--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "preact-cli": "^3.0.0",
     "preact-render-to-string": "^5.1.4",
     "preact-router": "^3.2.1",
+    "tailwindcss": "^2.1.2",
     "workbox-cacheable-response": "^5.1.4",
     "workbox-core": "^5.1.3",
     "workbox-precaching": "^5.1.3",
