--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build",
+    "build": "NODE_ENV=production preact build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "preact watch --esm --sw --port 8084",
+    "dev": "NODE_ENV=development PORT=8084 preact watch --esm --sw --port 8084",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests"
   },
@@ -20,6 +20,10 @@
       "build/"
     ]
   },
+  "peerDependencies": {
+    "webpack": "^4.x",
+    "workbox-webpack-plugin": "^5.x"
+  },
   "dependencies": {
     "preact": "^10.3.1",
     "preact-cli": "^3.0.0",
@@ -28,6 +32,7 @@
     "tailwindcss": "^2.1.2",
     "workbox-cacheable-response": "^5.1.4",
     "workbox-core": "^5.1.3",
+    "workbox-expiration": "^6.1.5",
     "workbox-precaching": "^5.1.3",
     "workbox-routing": "^5.1.3",
     "workbox-strategies": "^5.1.3",
