--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/preact": "^6.2.9",
+    "@testing-library/preact": "^2.0.1",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^26.0.8",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
