--- a/package.json
+++ b/package.json
@@ -27,48 +27,48 @@
     "workbox-webpack-plugin": "^5.x"
   },
   "dependencies": {
-    "cypress": "^7.3.0",
-    "preact": "^10.3.1",
-    "preact-cli": "^3.0.0",
-    "preact-render-to-string": "^5.1.4",
-    "preact-router": "^3.2.1",
-    "tailwindcss": "^2.1.2",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^6.1.5",
-    "workbox-precaching": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-webpack-plugin": "^5.1.3"
+    "cypress": "7.3.0",
+    "preact": "10.3.1",
+    "preact-cli": "3.0.0",
+    "preact-render-to-string": "5.1.4",
+    "preact-router": "3.2.1",
+    "tailwindcss": "2.1.2",
+    "workbox-cacheable-response": "5.1.4",
+    "workbox-core": "5.1.3",
+    "workbox-expiration": "6.1.5",
+    "workbox-precaching": "5.1.3",
+    "workbox-routing": "5.1.3",
+    "workbox-strategies": "5.1.3",
+    "workbox-webpack-plugin": "5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
-    "@storybook/preact": "^6.2.9",
-    "@testing-library/preact": "^2.0.1",
-    "@types/enzyme": "^3.10.5",
-    "@types/jest": "^26.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "babel-loader": "^8.2.2",
-    "core-js": "^3.12.1",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^2.2.0",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-preact": "^1.1.4",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.2.2",
-    "jest-preset-preact": "^4.0.2",
-    "node-sass": "^5.0.0",
+    "@babel/core": "7.14.3",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/preact": "6.2.9",
+    "@testing-library/preact": "2.0.1",
+    "@types/enzyme": "3.10.5",
+    "@types/jest": "26.0.8",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
+    "babel-loader": "8.2.2",
+    "core-js": "3.12.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-preact-pure": "2.2.0",
+    "eslint": "7.25.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-preact": "1.1.4",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "jest": "26.2.2",
+    "jest-preset-preact": "4.0.2",
+    "node-sass": "5.0.0",
     "sass-loader": "10",
-    "sirv-cli": "^1.0.0-next.3",
-    "typescript": "^3.7.5"
+    "sirv-cli": "1.0.0-next.3",
+    "typescript": "3.7.5"
   },
   "jest": {
     "preset": "jest-preset-preact",
