--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production preact build",
     "serve": "sirv build --port 8080 --cors --single",
-    "dev": "NODE_ENV=development PORT=8084 preact watch --esm --sw --port 8084",
+    "dev": "NODE_ENV=development PORT=8084 preact watch --sw --port 8084",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "test": "jest ./tests",
     "storybook": "start-storybook -p 6006",
